Fix part of #2526: An intermediate list and preview version for collection learner view (#2780)
* Fixes part of #2526

* fixes linting errors

* Made suggested changes

* Make suggested changes

* Fixed indentation

* made suggested changes

* fixed overlap issue

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -1815,6 +1815,10 @@ pre.oppia-pre-wrapped-text {
   margin-bottom: 6px;
 }
 
+.oppia-collection-player-title-font {
+  font-family: Capriola, Roboto, Arial, sans-serif;
+}
+
 /* Styles for the statistics page. */
 
 .oppia-back-arrow {
